Fix setup-libraries to checkout CMSSW independently and then checkout JMEDAS.

--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -32,11 +32,11 @@
     "    rm -rf cmssw-env\n",
     "fi\n",
     "cd $HOME\n",
-    "scramv1 project --name cmssw-env CMSSW $CMSSW_VER \n",
+    "scramv1 project CMSSW $CMSSW_VER \n",
     "\n",
-    "cd cmssw-env/src\n",
+    "cd $CMSSW_VER/src\n",
     "eval `scramv1 runtime -sh`\n",
-    "mv $HOME/Analysis .\n",
+    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS\n",
     "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_94X\n",
     "scram b -j 4\n",
     "cd ..\n",
