--- a/test/ntuple.ipynb
+++ b/test/ntuple.ipynb
@@ -7,7 +7,7 @@
     "Ntuple Production\n",
     "=================\n",
     "\n",
-    "Normally we would have you start by producing several (6) ntuples with various corrections and systematics applied. However, this is a time consumimg process and it is not necessary for each of you to perform this task. Thus we will be providing a set of large ntuples for you to copy locally."
+    "Normally we would have you start by producing several (6) ntuples with various corrections and systematics applied. However, this is a time consumimg process and it is not necessary for each of you to perform this task. Thus we will be providing a set of large ntuples for you to copy locally. Each of these ntuples will contain 100k events. If you would like more entries, you will need to remake the ntuples."
    ]
   },
   {
@@ -81,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%bash\n",
     "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD.root .\n",
     "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JESUncertaintyUp.root .\n",
     "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JESUncertaintyDown.root .\n",
@@ -88,6 +89,13 @@
     "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JERUncertaintyUp.root .\n",
     "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JERUncertaintyDown.root ."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
