--- a/notebooks/Exercise 1 - Basics.ipynb
+++ b/notebooks/Exercise 1 - Basics.ipynb
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "f = ROOT.TFile(\"files/ttjets_short.root\")\n",
+    "f = ROOT.TFile(\"files/ttjets.root\")\n",
     "\n",
     "h_ptAK4   = f.Get(\"h_ptAK4\")\n",
     "h_etaAK4  = f.Get(\"h_etaAK4\")\n",
