Use David's fork for now

--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -20,7 +20,7 @@
     "%%bash\n",
     "#!/bin/bash\n",
     "\n",
-    "CMSSW_VER=\"CMSSW_9_4_8\"\n",
+    "CMSSW_VER=\"CMSSW_9_4_12\"\n",
     "KERNEL_NAME=\"hats-jec\"\n",
     "\n",
     "set -e\n",
@@ -36,7 +36,7 @@
     "\n",
     "cd $CMSSW_VER/src\n",
     "eval `scramv1 runtime -sh`\n",
-    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS\n",
+    "git clone https://github.com/DryRun/JMEDAS.git Analysis/JMEDAS\n",
     "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_94X\n",
     "scram b -j 4\n",
     "cd ..\n",
@@ -110,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.5"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
