--- a/notebooks/Exercise 1 - Basics.ipynb
+++ b/notebooks/Exercise 1 - Basics.ipynb
@@ -160,9 +160,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "hats-jec",
    "language": "python",
-   "name": "python2"
+   "name": "hats-jec"
   },
   "language_info": {
    "codemirror_mode": {
