--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "cd $CMSSW_VER/src\n",
     "eval `scramv1 runtime -sh`\n",
-    "git clone https://github.com/DryRun/JMEDAS.git Analysis/JMEDAS\n",
+    "git clone https://github.com/cms-jet/JMEDAS.git Analysis/JMEDAS -b DAS2019\n",
     "git clone https://github.com/cms-jet/JetToolbox Analysis/JetToolbox -b jetToolbox_94X\n",
     "scram b -j 4\n",
     "cd ..\n",
