--- a/notebooks/Exercise 4 - Jet Resolution.ipynb
+++ b/notebooks/Exercise 4 - Jet Resolution.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -844,6 +844,33 @@
     "leg.Draw()\n",
     "\n",
     "c.Draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dijet resonance peaks\n",
+    "As a final exercise for the first part of this exercise, let's look at a simple dijet resonance peak. The following cell will produce histograms from an MC sample of Randall-Sundrum gravitons (RSGs) with m=3 TeV decaying to two quarks. The resulting signature is two high-$p_{mathrm{T}}$ jets, with a truth-level invariant mass of 3 TeV. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_dijets.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_qq_3000GeV.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets_corr_smear.root --maxevents=5000 --maxjets=2 --correctJets Fall17_17Nov2017_V32_MC --smearJets\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "This is the end of part 1 of the jets short exercise. If there is spare time remaining, we suggest going through some of the reference material from the first exercise. Otherwise, let's move on to part 2, where we'll talk about jet substructure."
    ]
   },
   {
