Add dijet histograms

--- a/notebooks/Exercise 4 - Jet Resolution.ipynb
+++ b/notebooks/Exercise 4 - Jet Resolution.ipynb
@@ -856,12 +856,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python: can't open file '/home/cms.dryu/CMSSW_9_4_12/src/Analysis/JMEDAS/scripts/jmedas_dijets.py': [Errno 2] No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_dijets.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_qq_3000GeV.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets_corr_smear.root --maxevents=5000 --maxjets=2 --correctJets Fall17_17Nov2017_V32_MC --smearJets\n"
+    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_dijet.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_qq_3000GeV.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_qq_3000GeV_corr_smear.root --maxevents=5000 --maxjets=2 --correctJets Fall17_17Nov2017_V32_MC --smearJets\n"
    ]
   },
   {
