--- a/setup-libraries.ipynb
+++ b/setup-libraries.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Setup Instructions\n",
     "==============\n",
-    "These instructions need to be run once to teach Jupyter about the software environment we'd like to use for the tutorial. It's important that you've followd all the steps in [HATSatLPCSetup2018](https://twiki.cern.ch/twiki/bin/view/CMS/HATSatLPCSetup2018), particularly the grid certificate instructions!\n",
+    "These instructions need to be run once to teach Jupyter about the software environment we'd like to use for the tutorial. It's important that you've followed all the [setup steps](https://github.com/cms-jet/JMEDAS/blob/DAS2019/README.md#getting-started-setup), particularly the grid certificate instructions!\n",
     "\n",
     "The following cell just needs to be executed once. If you logout and log back in, the setup will remain."
    ]
