--- a/notebooks/Exercise 5 - Jet Substructure.ipynb
+++ b/notebooks/Exercise 5 - Jet Substructure.ipynb
@@ -10,7 +10,8 @@
     "An excellent overview of jet substructure techniques can be found here:\n",
     "\n",
     "[Boosted objects: a probe of beyond the Standard Model physics](http://arxiv.org/abs/1012.5412) by Abdesselam et al.\n",
-    "You will also be looking at several \"jet grooming\" algorithms, which attempt to reduce the impact of \"soft\" contributions to clustering sequence by adding some other criteria.You will be investigating three types of groomers :\n",
+    "\n",
+    "You will also be looking at several \"jet grooming\" algorithms, which attempt to reduce the impact of \"soft\" contributions to clustering sequence by adding some other criteria.You will be investigating a few types of groomers :\n",
     "\n",
     "   * **Soft Drop**:\n",
     "      * Removes wide-angle, soft radiation from the jet.\n",
@@ -336,6 +337,18 @@
    "display_name": "hats-jec",
    "language": "python",
    "name": "hats-jec"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
