--- a/notebooks/Exercise 5 - Jet Substructure.ipynb
+++ b/notebooks/Exercise 5 - Jet Substructure.ipynb
@@ -45,7 +45,12 @@
     "      * [Maximizing Boosted Top Identification by Minimizing N-subjettiness](http://arxiv.org/abs/arXiv:1108.2701).\n",
     "   * For further reading, several measurements have been performed about jet substructure:\n",
     "      * [Studies of jet mass in dijet and W/Z+jet events]](http://arxiv.org/abs/1303.4811) (CMS).\n",
-    "      * [Jet mass and substructure of inclusive jets in sqrt(s) = 7 TeV pp collisions with the ATLAS experiment](http://arxiv.org/abs/1203.4606) (ATLAS).\n"
+    "      * [Jet mass and substructure of inclusive jets in sqrt(s) = 7 TeV pp collisions with the ATLAS experiment](http://arxiv.org/abs/1203.4606) (ATLAS).\n",
+    "\n",
+    "Some cool references on jet mass and substructure: \n",
+    "   * [Theory slides](http://www.hri.res.in/~sangam/sangam18/talks/Marzani-2.pdf) \n",
+    "   * [More theory slides]( http://indico.hep.manchester.ac.uk/getFile.py/access?contribId=14&resId=0&materialId=slides&confId=4413)\n",
+    "   * [Talk from Phil Harris](https://web.pa.msu.edu/seminars/hep_seminars/abstracts/2018/Harris-HEPSeminar-Slides-4172018.pdf) on searching for boosted $W$ bosons.\n"
    ]
   },
   {
@@ -285,7 +290,7 @@
     "\n",
     "$\\rho=m^2/(p_{\\mathrm{T}}R)^2$.\n",
     "\n",
-    "(Sometimes $\\rho$ is defined as the logarithm of this quantity). One useful feature of this variable is that QCD jet mass grows with $p_{\\mathrm{T}}$, i.e. the two quantities are strongly correlated, while $\\rho$ is much less correlated with $p_{\\mathrm{T}}$ (see [slides](http://www.hri.res.in/~sangam/sangam18/talks/Marzani-2.pdf)). \n"
+    "(Sometimes $\\rho$ is defined as the logarithm of this quantity). One useful feature of this variable is that QCD jet mass grows with $p_{\\mathrm{T}}$, i.e. the two quantities are strongly correlated, while $\\rho$ is much less correlated with $p_{\\mathrm{T}}$.\n"
    ]
   },
   {
