Reorder exercises, HATS customization

--- a/notebooks/Exercise 1 - Basics.ipynb
+++ b/notebooks/Exercise 1 - Basics.ipynb
@@ -408,9 +408,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hats-jec",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "hats-jec"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -422,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
