Update the ntuple.ipynb for 2019

--- a/notebooks/ntuple.ipynb
+++ b/notebooks/ntuple.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "```python\n",
     "#! /usr/bin/env python\n",
-    "import subprocess, shlex\n",
+    "import subprocess, shlex, sys\n",
     "\n",
     "def get_commands():\n",
     "    command_dict = {\n",
@@ -32,6 +32,8 @@
     "    return command_dict\n",
     "\n",
     "def main(debug = False):\n",
+    "    sys.path.append(os.path.expandvars(\"$CMSSW_BASE/src/Analysis/JMEDAS/python\"))\n",
+    "    \n",
     "    print \"Starting to run a series of cmsRun commands ... \"\n",
     "\n",
     "    command_dict = get_commands()\n",
@@ -43,7 +45,7 @@
     "        else:\n",
     "            child_filenames.append(\"JECNtuple.root\")\n",
     "\n",
-    "        command = \"nohup cmsRun jmehats_JEC.py print \" + cmd\n",
+    "        command = \"nohup cmsRun $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmehats_JEC.py print \" + cmd\n",
     "        if debug:\n",
     "            print \"The current command is\",command\n",
     "        out=open(name+\".log\",\"w\")\n",
@@ -82,12 +84,12 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD.root .\n",
-    "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JESUncertaintyUp.root .\n",
-    "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JESUncertaintyDown.root .\n",
-    "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JER.root .\n",
-    "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JERUncertaintyUp.root .\n",
-    "xrdcp root://cmseos.fnal.gov//store/user/hats/2018/JEC/JECNtuple_MiniAOD_JERUncertaintyDown.root ."
+    "xrdcp root://cmseos.fnal.gov//store/user/hats/2019/JEC/JECNtuple_MiniAOD.root .\n",
+    "xrdcp root://cmseos.fnal.gov//store/user/hats/2019/JEC/JECNtuple_MiniAOD_JESUncertaintyUp.root .\n",
+    "xrdcp root://cmseos.fnal.gov//store/user/hats/2019/JEC/JECNtuple_MiniAOD_JESUncertaintyDown.root .\n",
+    "xrdcp root://cmseos.fnal.gov//store/user/hats/2019/JEC/JECNtuple_MiniAOD_JER.root .\n",
+    "xrdcp root://cmseos.fnal.gov//store/user/hats/2019/JEC/JECNtuple_MiniAOD_JERUncertaintyUp.root .\n",
+    "xrdcp root://cmseos.fnal.gov//store/user/hats/2019/JEC/JECNtuple_MiniAOD_JERUncertaintyDown.root ."
    ]
   },
   {
@@ -100,9 +102,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hats-jec",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "hats-jec"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -114,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
