Update Exercise 8 with new file paths for the images in the notebook.

--- a/notebooks/Exercise 8 - Pileup.ipynb
+++ b/notebooks/Exercise 8 - Pileup.ipynb
@@ -137,11 +137,11 @@
     "</details>\n",
     "\n",
     "<font color='red'>Question 4: This plot shows the jet composition. Generally, why do we see the mixture of photons, neutral hadrons and charged hadrons that we see?</font>\n",
-    "<img src=\"images/composition_combo_pt_pfpaper_final_v2.png\" alt=\"Jet Composition Vs. Pt\" width=\"400px\" style=\"float: right;\" />\n",
+    "<img src=\"files/composition_combo_pt_pfpaper_final_v2.png\" alt=\"Jet Composition Vs. Pt\" width=\"400px\" style=\"float: right;\" />\n",
     "<details>\n",
     "<summary><font color='blue'>Show answer...</font></summary>\n",
     "A majority of the constituents in a jet come from pions. Pions come in neutral ($\\pi^{0}$) and charged ($\\pi^{\\pm}$) varieties. Naively you would expect the composition to be two thirds charged hadrons and one third neutral hadrons. However, we know that $\\pi^{0}$ decays to two photons, which leads to a large photon fraction.\n",
-    "<img src=\"images/efracs_particles_8TeV.png\" alt=\"Jet Composition MC\" width=\"380px\" style=\"float: left;\" />\n",
+    "<img src=\"files/efracs_particles_8TeV.png\" alt=\"Jet Composition MC\" width=\"380px\" style=\"float: left;\" />\n",
     "</details>"
    ]
   },
@@ -165,10 +165,10 @@
     "<summary><font color='blue'>Show answer...</font></summary>\n",
     "The x-axis is plotted as a function of $\\mu$ as this is a true measurement of pileup (additional interactions) and not just some variable which is correlated with pileup. Other options might have been $N_{PV}$, which has an efficiency which is less than 100%, and $\\rho$, which assumes that the pileup energy density is uniform. We also get different values of $\\rho$ if we measure it for different regions in $\\eta$ (i.e. $|\\eta|<3$ or $|\\eta|<5$).\n",
     "\n",
-    "<img src=\"images/Zmumu_npv.png\" alt=\"Zmumu_npv\" width=\"380px\" style=\"float: left;\" />\n",
-    "<img src=\"images/Zmumu_rho.png\" alt=\"Zmumu_rho\" width=\"380px\" style=\"float: right;\" />\n",
-    "<img src=\"images/Zmumu_npv_nputruth.png\" alt=\"Zmumu_npv_nputruth\" width=\"380px\" style=\"float: left;\" />\n",
-    "<img src=\"images/Zmumu_rho_nputruth.png\" alt=\"Zmumu_rho_nputruth\" width=\"380px\" style=\"float: right;\" />\n",
+    "<img src=\"files/Zmumu_npv.png\" alt=\"Zmumu_npv\" width=\"380px\" style=\"float: left;\" />\n",
+    "<img src=\"files/Zmumu_rho.png\" alt=\"Zmumu_rho\" width=\"380px\" style=\"float: right;\" />\n",
+    "<img src=\"files/Zmumu_npv_nputruth.png\" alt=\"Zmumu_npv_nputruth\" width=\"380px\" style=\"float: left;\" />\n",
+    "<img src=\"files/Zmumu_rho_nputruth.png\" alt=\"Zmumu_rho_nputruth\" width=\"380px\" style=\"float: right;\" />\n",
     "</details>"
    ]
   },
@@ -212,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
