--- a/notebooks/Exercise 9 - Jet Energy Corrections - V2.ipynb
+++ b/notebooks/Exercise 9 - Jet Energy Corrections - V2.ipynb
@@ -37,6 +37,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open a file\n",
+    "f = r.TFile(\"JECNtuple_MiniAOD.root\")\n",
+    "# Look at its contents\n",
+    "f.ls()\n",
+    "# Change directories and look at its contents\n",
+    "f.cd(\"AK4PFCHSL1L2L3\")\n",
+    "r.gDirectory.ls()\n",
+    "# Get the tree and look at its branches\n",
+    "tree = r.gDirectory.Get(\"t\")\n",
+    "tree.Show(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -52,7 +70,7 @@
     "\n",
     "#Settings for each of the pads in the canvas\n",
     "settingsTMP = {'response' : (1,0.0,2.0,0.0,0.12,\"Response (p_{T}^{RECO}/p_{T}^{GEN})\",\"a.u.\",False),\n",
-    "\t\t\t   'pt'       : (2,10.0,200.0,0.0,0.21,\"p_{T}^{RECO}\",\"a.u.\",True),\n",
+    "\t\t\t   'pt'       : (2,10.0,1000.0,0.0,0.21,\"p_{T}^{RECO}\",\"a.u.\",True),\n",
     "\t\t\t   'eta' \t  : (3,-5,5,0.0,0.1,\"#eta\",\"a.u.\",False),\n",
     "\t\t\t   'phi' \t  : (4,-3.14159,3.14159,0.0,0.04,\"#phi\",\"a.u.\",False)\n",
     "\t\t\t   }\n",
@@ -101,10 +119,10 @@
     "    for jt in jetTypes:\n",
     "        if not doPUPPI and jt == \"PFPuppi\":\n",
     "            continue\n",
-    "        if not f.GetDirectory(alg_size+jt.upper()+\"L1L2L3\"):\n",
+    "        if not f.GetDirectory(alg_size+jt+\"L1L2L3\"):\n",
     "            continue\n",
     "\n",
-    "        tree = f.Get(alg_size+jt.upper()+\"L1L2L3/t\")\n",
+    "        tree = f.Get(alg_size+jt+\"L1L2L3/t\")\n",
     "\n",
     "        for cor in corrections:\n",
     "            # Create the histograms\n",
@@ -116,7 +134,7 @@
     "\n",
     "            # Fill the histograms\n",
     "            for ievent, event in enumerate(tqdm_notebook(tree,desc=\"event loop\")):\n",
-    "                if ievent%10000==0: print \"\\t\\tEvent\",ievent,\"...\"\n",
+    "                #if ievent%10000==0: print \"\\t\\tEvent\",ievent,\"...\"\n",
     "                if maxEvents>-1 and ievent > maxEvents:\n",
     "                    continue\n",
     "                for jet, pt_from_tree in enumerate(event.jtpt):\n",
@@ -211,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jetCollection = \"AK4PFCHSL1L2L3\" # The jet collections to get from the ntuple\n",
+    "jetcollection = \"AK4PFCHSL1L2L3\" # The jet collections to get from the ntuple\n",
     "nsigma        = 1.0   # The number of sigma from the histogram mean which is used to determine the fit range\n",
     "doPUPPI       = False # Plot the PFPuppi algorithm as well (if it exists in the ntuple)\n",
     "drawFits      = False # Flag to draw, or not, the Gaussian fits to the response curves\n",
@@ -424,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
