Add a JEC uncertainty exercise.

--- a/notebooks/Exercise 11 - The JEC Game.ipynb
+++ b/notebooks/Exercise 11 - The JEC Game.ipynb
@@ -28,7 +28,7 @@
     "from collections import OrderedDict\n",
     "from Analysis.JMEDAS.tdrstyle_mod14 import *\n",
     "from tqdm import tqdm_notebook\n",
-    "import math\n",
+    "import math,os\n",
     "#from ipywidgets import FloatProgress\n",
     "#from IPython.display import display\n",
     "\n",
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do the same computation but with the L2Relative/L3Absolute corrections. Remember to chain the corrections together. Make a table of the corrected jets. Compare this to the corrected jets from the ntuple.\n",
+    "<font color='red'>Do the same computation but with the L2Relative/L3Absolute corrections. Remember to chain the corrections together. Make a table of the corrected jets. Compare this to the corrected jets from the ntuple.</font>\n",
     "<details><summary><font color='blue'>Hint...</font></summary>\n",
     "The the new p<sub>T</sub><sup>L1</sup> is now the input p<sub>T</sub> for this computation.\n",
     "</details>\n",
@@ -302,7 +302,7 @@
     "vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_L1FastJet_AK4PFchs.txt')))\n",
     "#vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_L2Relative_AK4PFchs.txt')))\n",
     "#vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_L3Absolute_AK4PFchs.txt')))\n",
-    "jec = ROOT.FactorizedJetCorrector( vPar )\n",
+    "jec = r.FactorizedJetCorrector( vPar )\n",
     "for jet in jet_list:\n",
     "    jec.setJetEta( jet['eta'] )\n",
     "    jec.setJetPt ( jet['pt'] )\n",
@@ -316,7 +316,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The same process works for the uncertainties, but the computation is slightly different."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jecUnc = r.JetCorrectionUncertainty(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_Uncertainty_AK4PFchs.txt'))\n",
+    "for jet in jet_list_l1l2l3:\n",
+    "    ptCor = jet['pt']\n",
+    "    jecUnc.setJetEta( jet['eta'] )\n",
+    "    #jecUnc.setJetPhi( jet['phi'] )\n",
+    "    jecUnc.setJetPt( ptCor )\n",
+    "    ptCor_shiftedUp = ptCor*(1+jecUnc.getUncertainty(1))\n",
+    "    jecUnc.setJetEta( jet['eta'] )\n",
+    "    #jecUnc.setJetPhi( jet['phi'] )\n",
+    "    jecUnc.setJetPt( ptCor )\n",
+    "    ptCor_shiftedDown = ptCor*(1+(-1*jecUnc.getUncertainty(0)))\n",
+    "    print str(ptCor),'+',str(math.abs(ptCor-ptCor_shiftedUp)),'-',str(math.abs(ptCor-ptCor_shiftedDown))"
+   ]
   }
  ],
  "metadata": {
