Fix a bug in the uncertainty exercise.

--- a/notebooks/Exercise 11 - The JEC Game.ipynb
+++ b/notebooks/Exercise 11 - The JEC Game.ipynb
@@ -326,6 +326,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "jet_list_l1l2l3 = [\n",
+    "    {'rho':27.972512,'pt':,'eta':-0.942416,'area':0.4986655},\n",
+    "    {'rho':22.310171,'pt':,'eta':1.5357669,'area':0.5285854},\n",
+    "    {'rho':8.2038650,'pt':,'eta':0.0332580,'area':0.4687455},\n",
+    "    {'rho':27.182916,'pt':,'eta':-0.851783,'area':0.5186121},\n",
+    "]\n",
     "jecUnc = r.JetCorrectionUncertainty(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_Uncertainty_AK4PFchs.txt'))\n",
     "for jet in jet_list_l1l2l3:\n",
     "    ptCor = jet['pt']\n",
@@ -337,7 +343,7 @@
     "    #jecUnc.setJetPhi( jet['phi'] )\n",
     "    jecUnc.setJetPt( ptCor )\n",
     "    ptCor_shiftedDown = ptCor*(1+(-1*jecUnc.getUncertainty(0)))\n",
-    "    print str(ptCor),'+',str(math.abs(ptCor-ptCor_shiftedUp)),'-',str(math.abs(ptCor-ptCor_shiftedDown))"
+    "    print str(ptCor),'+',str(abs(ptCor-ptCor_shiftedUp)),'-',str(abs(ptCor-ptCor_shiftedDown))"
    ]
   }
  ],
