Use the JEC set from the MiniAOD files.

--- a/notebooks/Exercise 11 - The JEC Game.ipynb
+++ b/notebooks/Exercise 11 - The JEC Game.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat ../data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_L1FastJet_AK4PFchs.txt"
+    "%cat ../data/JECs/Summer16_23Sep2016V4_MC/Summer16_23Sep2016V4_MC_L1FastJet_AK4PFchs.txt"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "    \n",
     "```python\n",
     "import math\n",
-    "jec = 1.0-(0.4986655*(-1.06337+(0.515841*27.972512)*(1.+(-0.0236954)*math.log(25.268358)))/25.268358)\n",
+    "jec = 1.0-(0.4986655*(-1.82028+(0.728067*27.972512)*(1.+(-0.0897926)*math.log(25.268358)))/25.268358)\n",
     "print jec\n",
     "print 25.268358*jec \n",
     "```\n",
@@ -143,7 +143,7 @@
     "\n",
     "```python\n",
     "f = r.TF3(\"f\",\"1.0-z*([0]+([1]*x)*(1.0+[2]*log(y)))/y\")\n",
-    "f.SetParameters(-1.06337,0.515841,-0.0236954)\n",
+    "f.SetParameters(-1.82028,0.728067,-0.0897926)\n",
     "jec = f.Eval(27.972512,25.268358,0.4986655)\n",
     "print jec\n",
     "print 25.268358*jec\n",
@@ -157,10 +157,10 @@
     "    \n",
     "```python\n",
     "jet_list_parameters = [\n",
-    "    [-1.06337,0.515841,-0.0236954],\n",
-    "    [-0.676086,0.588288,-0.10332],\n",
-    "    [-0.938589,0.45784,0.0149357],\n",
-    "    [-1.07047,0.510552,-0.0178414],\n",
+    "    [-1.82028,0.728067,-0.0897926],\n",
+    "    [-1.32373,0.899498,-0.180374],\n",
+    "    [-1.88478,0.663812,-0.0590435],\n",
+    "    [-1.97421,0.747076,-0.0886402],\n",
     "]\n",
     "f = r.TF3(\"f\",\"1.0-z*([0]+([1]*x)*(1.0+[2]*log(y)))/y\")\n",
     "for j, jet in enumerate(jet_list):\n",
@@ -194,10 +194,10 @@
     "\n",
     "```python\n",
     "jet_list_l1 = [\n",
-    "    {'rho':27.972512,'pt':19.1535921479,'eta':-0.942416,'area':0.4986655},\n",
-    "    {'rho':22.310171,'pt':39.6819831322,'eta':1.5357669,'area':0.5285854},\n",
-    "    {'rho':8.2038650,'pt':5496.46520332,'eta':0.0332580,'area':0.4687455},\n",
-    "    {'rho':27.182916,'pt':575.122474008,'eta':-0.851783,'area':0.5186121},\n",
+    "    {'rho':27.972512,'pt':18.965124217,'eta':-0.942416,'area':0.4986655},\n",
+    "    {'rho':22.310171,'pt':40.8701325024,'eta':1.5357669,'area':0.5285854},\n",
+    "    {'rho':8.2038650,'pt':5497.64115121,'eta':0.0332580,'area':0.4687455},\n",
+    "    {'rho':27.182916,'pt':577.381173741,'eta':-0.851783,'area':0.5186121},\n",
     "]\n",
     "```\n",
     "\n",
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat ../data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_L2Relative_AK4PFchs.txt"
+    "%cat ../data/JECs/Summer16_23Sep2016V4_MC/Summer16_23Sep2016V4_MC_L2Relative_AK4PFchs.txt"
    ]
   },
   {
@@ -234,20 +234,20 @@
     "\n",
     "```python\n",
     "jet_list_l1 = [\n",
-    "    {'rho':27.972512,'pt':19.1535921479,'eta':-0.942416,'area':0.4986655},\n",
-    "    {'rho':22.310171,'pt':39.6819831322,'eta':1.5357669,'area':0.5285854},\n",
-    "    {'rho':8.2038650,'pt':5496.46520332,'eta':0.0332580,'area':0.4687455},\n",
-    "    {'rho':27.182916,'pt':575.122474008,'eta':-0.851783,'area':0.5186121},\n",
+    "    {'rho':27.972512,'pt':18.965124217,'eta':-0.942416,'area':0.4986655},\n",
+    "    {'rho':22.310171,'pt':40.8701325024,'eta':1.5357669,'area':0.5285854},\n",
+    "    {'rho':8.2038650,'pt':5497.64115121,'eta':0.0332580,'area':0.4687455},\n",
+    "    {'rho':27.182916,'pt':577.381173741,'eta':-0.851783,'area':0.5186121},\n",
     "]\n",
     "jet_list_parameters = [\n",
-    "    [0.782742,8.49349,19.1778,-0.0796802,1.70189,1.71147],\n",
-    "    [-0.225943,143.614,100,-0.0346735,7.07476,1.70337],\n",
-    "    [0.804251,5.8919,13.0151,-0.106426,1.0992,1.60902],\n",
-    "    [0.776255,10.2523,25.0387,-0.0634531,2.25437,1.78643],\n",
+    "    [1.15158,16.1036,-0.00601581,-0.00127766,0.00034833],\n",
+    "    [1.13994,37.285,-0.00122072,-0.000286474,3.01379e-05],\n",
+    "    [1.04627,2570.31,3.02494e-06,-7.73772e-08,9.74598e-11],\n",
+    "    [1.07988,432.787,1.01127e-05,2.32598e-08,-3.57916e-10],\n",
     "]\n",
-    "f = r.TF3(\"f\",\"([0]+([1]/((log10(x)^2)+[2])))+([3]*exp(-([4]*((log10(x)-[5])*(log10(x)-[5])))))\")\n",
+    "f = r.TF3(\"f\",\"max(0.0001,[0]+((min(3000.,x)-[1])*([2]+((min(3000.,x)-[1])*([3]+((min(3000.,x)-[1])*[4]))))))\")\n",
     "for j, jet in enumerate(jet_list_l1):\n",
-    "    f.SetParameters(jet_list_parameters[j][0],jet_list_parameters[j][1],jet_list_parameters[j][2],jet_list_parameters[j][3],jet_list_parameters[j][4],jet_list_parameters[j][5])\n",
+    "    f.SetParameters(jet_list_parameters[j][0],jet_list_parameters[j][1],jet_list_parameters[j][2],jet_list_parameters[j][3],jet_list_parameters[j][4])\n",
     "    print jet['pt']*f.Eval(jet['pt'])\n",
     "```\n",
     "\n",
@@ -259,10 +259,10 @@
     "\n",
     "```python\n",
     "jet_list_l1l2l3 = [\n",
-    "    {'rho':27.972512,'pt':21.6898595912,'eta':-0.942416,'area':0.4986655},\n",
-    "    {'rho':22.310171,'pt':45.3298615329,'eta':1.5357669,'area':0.5285854},\n",
-    "    {'rho':8.2038650,'pt':5615.84709884,'eta':0.0332580,'area':0.4687455},\n",
-    "    {'rho':27.182916,'pt':622.694150586,'eta':-0.851783,'area':0.5186121},\n",
+    "    {'rho':27.972512,'pt':21.4697622893,'eta':-0.942416,'area':0.4986655},\n",
+    "    {'rho':22.310171,'pt':46.3169040985,'eta':1.5357669,'area':0.5285854},\n",
+    "    {'rho':8.2038650,'pt':5723.12884379,'eta':0.0332580,'area':0.4687455},\n",
+    "    {'rho':27.182916,'pt':624.002697501,'eta':-0.851783,'area':0.5186121},\n",
     "]\n",
     "```\n",
     "\n",
@@ -298,10 +298,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "era = \"Summer16_23Sep2016V4_MC\"\n",
     "vPar = r.vector(r.JetCorrectorParameters)()\n",
-    "vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_L1FastJet_AK4PFchs.txt')))\n",
-    "#vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_L2Relative_AK4PFchs.txt')))\n",
-    "#vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_L3Absolute_AK4PFchs.txt')))\n",
+    "vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/{}/{}_L1FastJet_AK4PFchs.txt'.format(era,era))))\n",
+    "#vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/{}/{}_L2Relative_AK4PFchs.txt'.format(era,era))))\n",
+    "#vPar.push_back(r.JetCorrectorParameters(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/{}/{}_L3Absolute_AK4PFchs.txt'.format(era,era))))\n",
     "jec = r.FactorizedJetCorrector( vPar )\n",
     "for jet in jet_list:\n",
     "    jec.setJetEta( jet['eta'] )\n",
@@ -332,7 +333,8 @@
     "    {'rho':8.2038650,'pt':,'eta':0.0332580,'area':0.4687455},\n",
     "    {'rho':27.182916,'pt':,'eta':-0.851783,'area':0.5186121},\n",
     "]\n",
-    "jecUnc = r.JetCorrectionUncertainty(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/Spring16_25nsV5_MC/Spring16_25nsV5_MC_Uncertainty_AK4PFchs.txt'))\n",
+    "era = \"Summer16_23Sep2016V4_MC\"\n",
+    "jecUnc = r.JetCorrectionUncertainty(os.path.expandvars('$CMSSW_BASE/src/Analysis/JMEDAS/data/JECs/{}/{}_Uncertainty_AK4PFchs.txt'.format(era,era)))\n",
     "for jet in jet_list_l1l2l3:\n",
     "    ptCor = jet['pt']\n",
     "    jecUnc.setJetEta( jet['eta'] )\n",
